# django-approve

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
django_approve/: __init__.py  apps.py  config.py  cons.py  exceptions.py  fields.py  middlewares.py  registry.py  serializers.py  services.py  signals.py
django_approve/admin/: __init__.py  approval_config.py  change_request.py  filters.py  forms.py  mixins.py
django_approve/migrations/: 0001_initial.py  0002_changerequestfield_payload_and_more.py
django_approve/models/: __init__.py  approval_config.py  change_request.py
django_approve/static/django_approve/: change_request.css
django_approve/templates/django_approve/: changerequest_change_form.html  payload_table.html  target_change_form.html
tests/: admin.py  models.py  settings.py  test_admin.py  test_config.py  test_fields.py  test_middlewares.py  test_models.py  test_registry.py  test_serializers.py  test_services.py  test_signals.py
