[project]
name = "django-approve"
version = "0.1.0"
description = ""
authors = [
    {name = "Denis Novikov",email = "alpden550@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.16,<0.16.0)",
    "pyrefly (>=1.0.0,<2.0.0)"
]

[tool.ruff]
line-length = 120
ignore-init-module-imports = true

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # mccabe
    "C90",
    # pep8-naming,
    "N",
    # flake8-bandit
    "S",
    # flake8-boolean-trap
    "FBT",
    # flake8-commas,
    "COM",
    # flake8-comprehensions
    "C4",
    # flake8-pie
    "PIE",
    # flake8-print
    "T",
    # flake8-pytest-style
    "PT",
    # flake8-return
    "RET",
    # flake8-tidy-imports
    "TID",
    # eradicate
    "ERA",
    # Pylint
    "PL",
    # tryceratops
    "TRY",
    # Perflint
    "PERF",
    # refurb
    "FURB",
    # Ruff-specific rules
    "RUF",
    # flake8-use-pathlib
    "PTH",
]

ignore= ["S101", "COM812"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 5.
max-complexity = 5
