[project]
name = "django-approve"
version = "0.1.0"
description = "Moderate edits in the Django admin: changes to tracked model fields wait for a second person's approval (four-eyes / maker-checker)"
authors = [
    {name = "Denis Novikov",email = "alpden550@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
keywords = ["django", "admin", "approval", "maker-checker", "four-eyes", "workflow", "moderator"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "django (>=5)"
]

[project.urls]
Homepage = "https://github.com/alpden550/django-approve"
Repository = "https://github.com/alpden550/django-approve"
Issues = "https://github.com/alpden550/django-approve/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.16,<0.16.0)",
    "pyrefly (>=1.0.0,<2.0.0)",
    "django-stubs (>=6.0.5,<7.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "mixer (>=7.2.2,<8.0.0)",
    "complexipy (>=5.6.1,<6.0.0)",
    "hypothesis (>=6.155.7,<7.0.0)"
]

[tool.ruff]
line-length = 120
extend-exclude = ["**/migrations/**"]

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # mccabe
    "C90",
    # pep8-naming,
    "N",
    # flake8-bandit
    "S",
    # flake8-boolean-trap
    "FBT",
    # flake8-commas,
    "COM",
    # flake8-comprehensions
    "C4",
    # flake8-pie
    "PIE",
    # flake8-print
    "T",
    # flake8-pytest-style
    "PT",
    # flake8-return
    "RET",
    # flake8-tidy-imports
    "TID",
    # eradicate
    "ERA",
    # Pylint
    "PL",
    # tryceratops
    "TRY",
    # Perflint
    "PERF",
    # refurb
    "FURB",
    # Ruff-specific rules
    "RUF",
    # flake8-use-pathlib
    "PTH",
]

ignore= ["S101", "COM812"]

[tool.ruff.lint.per-file-ignores]
"**/settings.py" = ["S105"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 5.
max-complexity = 5

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pyrefly]
project-includes = ["**/*.py*", "**/*.ipynb"]
project-excludes = [
    "**/migrations/**",
    "**/.venv/**",
    "**/__pycache__/**",
    "**/static/**",
    "**/media/**",
    "**/tests/**",
]
python-version = "3.14"

[tool.complexipy]
exclude = ["**/tests/**"]
